Create root, container and sections size layout

--- a/index.html
+++ b/index.html
@@ -15,6 +15,23 @@
     <title>Isaac</title>
   </head>
   <body>
+    <div class="root">
+      <header class="header"></header>
+
+			<main class="main">
+				
+				<section class="section container">
+
+				</section>
+				<section class="section container b">
+
+				</section>
+
+
+			</main>
+
+
+    </div>
 
     <script src="src/js/script.js"></script>
   </body>
