test fixed header layout

--- a/index.html
+++ b/index.html
@@ -16,9 +16,14 @@
   </head>
   <body>
     <div class="root">
-      <header class="header"></header>
 
-			<main class="main">
+			<div class="top-fixed spacing">
+				<header class="header container ">
+
+				</header>
+			</div>
+
+			<main class="spacing">
 				
 				<section class="section container">
 
@@ -27,12 +32,8 @@
 
 				</section>
 
-
 			</main>
-
-
     </div>
-
     <script src="src/js/script.js"></script>
   </body>
 </html>
