Fix header align

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 
 			<div class="top-fixed spacing">
 				<header class="header container ">
-
+					<!-- Logo -->
+					<!-- Nav -->
+					<!-- wrap com botões(lang e tema) -->
 				</header>
 			</div>
 
