Add button to home section

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
               <button class="icon-btn">
                 <i class="uil uil-sun"></i>
               </button>
-              <button class="icon-btn">
+              <button class="icon-btn icon-btn--disabled ">
                 <i class="uil uil-language"></i>
               </button>
             </div>
@@ -89,6 +89,11 @@
             saepe! Dolor rem pariatur quos esse cumque laborum nostrum sequi
             ipsum!
           </p>
+
+          <button class="box-btn" data-animation="bottom-top">
+            Scroll down
+            <i class="uil uil-angle-down"></i>
+          </button>
         </section>
         <section class="section section--about container" id="about">
           About
