--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
             Eu desenvolvo para web.
           </h3>
           <p class="section__text section__text--mono">
-            Sou desenvolvedor Front-End. Apaixonado por programação e tecnologia, atualmente estou estudando JavaScript, HTML e CSS.
+            Sou desenvolvedor Front-End. Apaixonado por programação e
+            tecnologia, atualmente estou estudando JavaScript, HTML e CSS.
           </p>
 
           <a href="#projects" class="box-btn">
@@ -105,6 +106,13 @@
                 JavaScript, HTML e CSS, e, tenho como objetivo aprender React e
                 Node futuramente.
               </p>
+
+              <h3 class="section__subtitle">Tecnologias</h3>
+              <ul class="skills__list">
+                <li class="skills__item">JavaScript</li>
+                <li class="skills__item">HTML</li>
+                <li class="skills__item">CSS</li>
+              </ul>
             </div>
             <img
               src="src/img/me.png"
@@ -122,6 +130,68 @@
           Contact
         </section>
       </main>
+
+      <footer class="footer spacing">
+        <div class="footer__content container">
+          <ul class="social__list">
+            <li class="social__item icon-btn--animated">
+              <a
+                href="https://github.com/eoisaac"
+                target="_blank"
+                class="social__link"
+              >
+                <i class="uil uil-github-alt"></i>
+              </a>
+            </li>
+            <li class="social__item icon-btn--animated">
+              <a
+                href="https://www.linkedin.com/in/eoisaac"
+                target="_blank"
+                class="social__link"
+              >
+                <i class="uil uil-linkedin-alt"></i>
+              </a>
+            </li>
+            <li class="social__item icon-btn--animated">
+              <a
+                href="https://twitter.com/eoisaacc"
+                target="_blank"
+                class="social__link"
+              >
+                <i class="uil uil-twitter-alt"></i>
+              </a>
+            </li>
+            <li class="social__item icon-btn--animated">
+              <a
+                href="https://www.instagram.com/eoisaacc"
+                target="_blank"
+                class="social__link"
+              >
+                <i class="uil uil-instagram"></i>
+              </a>
+            </li>
+          </ul>
+
+          <button class="icon-btn" data-js="">
+            <i class="uil uil-angle-up"></i>
+          </button>
+        </div>
+
+        <div>
+          <p class="footer__copyright">
+            Feito com 💜 por
+            <a
+              href="https://github.com/eoisaac"
+              target="_blank"
+              class="section__link"
+              >Isaac</a
+            >.
+          </p>
+          <p class="footer__copyright">
+            &copy; <span data-js="copright-year">2022</span> | Isaac
+          </p>
+        </div>
+      </footer>
     </div>
     <script src="src/js/script.js"></script>
   </body>
