Create updateCopyrightYear function

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <header class="header top-fixed spacing">
         <nav class="nav container">
           <h2>
-            <a href="#home" class="nav__logo"> &lti&gt </a>
+            <a href="#home" class="nav__logo"> &lt;i&gt; </a>
           </h2>
 
           <div class="nav__menu" data-js="nav-menu">
@@ -62,7 +62,7 @@
           <h1 class="section__text section__text--serif">Oi, meu nome é</h1>
           <h2 class="section__title section__title--huge">Isaac Santiago;</h2>
           <h3 class="section__subtitle section__subtitle--huge">
-            Eu desenvolvo para web.
+            Desenvolvedor web.
           </h3>
           <p class="section__text section__text--mono">
             Sou desenvolvedor Front-End. Apaixonado por programação e
@@ -84,7 +84,7 @@
                 e cursando Sistemas de Informação.
               </p>
               <p class="section__text section__text--mono">
-                Quando sai do ensino médio, entrei na faculdade de Engenharia de
+                Ao concluir ensino médio, entrei na faculdade de Engenharia de
                 Bioprocessos na UFSJ, onde tive meu primeiro contato com
                 programação através da matéria de Algoritmos e Estrutura de
                 Dados, na qual aprendi o básico da linguagem C. A partir dai,
@@ -98,8 +98,8 @@
                   class="section__link"
                   >Marco Bruno</a
                 >
-                e comecei a acompanhá-lo. Ele estava desenvolvendo uma
-                plataforma de cursos, a FiredLabs, e lá tinha um curso básico
+                e comecei a segui-lo. Ele estava desenvolvendo uma
+                plataforma de cursos, a FiredLabs, que possui um curso básico
                 sobre HTML e CSS, no qual o projeto era desenvolver um site
                 portfólio. Após terminar esse curso, comecei a me interessar
                 mais por desenvolver sites, e, desde então, venho estudando
@@ -172,14 +172,14 @@
             </li>
           </ul>
 
-          <button class="icon-btn" data-js="">
+          <a href="#home" class="icon-btn">
             <i class="uil uil-angle-up"></i>
-          </button>
+          </a>
         </div>
 
         <div>
           <p class="footer__copyright">
-            Feito com 💜 por
+            Feito com <i class="uil uil-heart"></i> por
             <a
               href="https://github.com/eoisaac"
               target="_blank"
@@ -188,7 +188,7 @@
             >.
           </p>
           <p class="footer__copyright">
-            &copy; <span data-js="copright-year">2022</span> | Isaac
+            &copy; Isaac | <span data-js="copyright-year">year</span>
           </p>
         </div>
       </footer>
