Add toggle theme

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
             </ul>
 
             <div class="nav__config">
-              <button class="icon-btn">
-                <i class="uil uil-sun"></i>
+              <button class="icon-btn" data-js="toggle-theme-btn">
+                <i class="uil uil-sun" data-js="theme-icon"></i>
               </button>
             </div>
           </div>
@@ -79,9 +79,10 @@
           <div class="about__content">
             <div>
               <p class="section__text section__text--mono">
-                Meu nome é Isaac Santiago Gomes Pereira, nasci em Ouro Branco,
-                MG, e atualmente estou estudando sobre desenvolvimento Front-End
-                e cursando Sistemas de Informação.
+                Meu nome é Isaac Santiago Gomes Pereira, tenho
+                <span data-js="my-current-age">20</span> anos e nasci em Ouro
+                Branco, MG. Atualmente estou estudando sobre desenvolvimento
+                Front-End e cursando Sistemas de Informação.
               </p>
               <p class="section__text section__text--mono">
                 Ao concluir ensino médio, entrei na faculdade de Engenharia de
@@ -98,13 +99,13 @@
                   class="section__link"
                   >Marco Bruno</a
                 >
-                e comecei a segui-lo. Ele estava desenvolvendo uma
-                plataforma de cursos, a FiredLabs, que possui um curso básico
-                sobre HTML e CSS, no qual o projeto era desenvolver um site
-                portfólio. Após terminar esse curso, comecei a me interessar
-                mais por desenvolver sites, e, desde então, venho estudando
-                JavaScript, HTML e CSS, e, tenho como objetivo aprender React e
-                Node futuramente.
+                e comecei a segui-lo. Ele estava desenvolvendo uma plataforma de
+                cursos, a FiredLabs, que possui um curso básico sobre HTML e
+                CSS, no qual o projeto era desenvolver um site portfólio. Após
+                terminar esse curso, comecei a me interessar mais por
+                desenvolver sites, e, desde então, venho estudando JavaScript,
+                HTML e CSS, e, tenho como objetivo aprender React e Node
+                futuramente.
               </p>
 
               <h3 class="section__subtitle">Tecnologias</h3>
@@ -188,7 +189,7 @@
             >.
           </p>
           <p class="footer__copyright">
-            &copy; Isaac | <span data-js="copyright-year">year</span>
+            &copy; Isaac | <span data-js="copyright-year">2022</span>
           </p>
         </div>
       </footer>
