--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <h1 class="section__text section__text--serif">Oi, meu nome é</h1>
           <h2 class="section__title section__title--huge">Isaac Santiago;</h2>
           <h3 class="section__subtitle section__subtitle--huge">
-            Desenvolvedor web.
+             Desenvolvedor web.
           </h3>
           <p class="section__text section__text--mono">
             Sou desenvolvedor Front-End. Apaixonado por programação e
@@ -124,7 +124,180 @@
         </section>
 
         <section class="section section--projects container" id="projects">
-          Projects
+          <h2 class="section__title">Meus Projetos</h2>
+
+          <div class="projects__grid">
+
+            <article class="project-card">
+              <header class="card__header">
+                <div class="card__top">
+                  <img src="src/img/folder.svg" alt="Folder icon" class="card__image">
+                  <div class="card__links">
+                    <a href="#" target="_blank" class="icon-btn card__link">
+                      <i class="uil uil-github-alt"></i>
+                    </a>
+                    <a href="#" target="_blank" class="icon-btn card__link">
+                      <i class="uil uil-external-link-alt"></i>
+                  </a>
+                </div>
+              </div>
+                <div class="card__content">
+                  <h3 class="card__title">Nome Projeto</h3>
+                  <p class="card__description">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia vero, dignissimos ea minima incidunt illum officiis suscipit repellat, sed nulla necessitatibus nostrum! 
+                  </p>
+                </div>
+              </header>
+              <footer class="card__footer">
+                <span class="card__tag">JS</span>
+                <span class="card__tag">HTML</span>
+                <span class="card__tag">CSS</span>
+              </footer>
+            </article>
+            <article class="project-card">
+              <header class="card__header">
+                <div class="card__top">
+                  <img src="src/img/folder.svg" alt="Folder icon" class="card__image">
+                  <div class="card__links">
+                    <a href="#" target="_blank" class="icon-btn card__link">
+                      <i class="uil uil-github-alt"></i>
+                    </a>
+                    <a href="#" target="_blank" class="icon-btn card__link">
+                      <i class="uil uil-external-link-alt"></i>
+                  </a>
+                </div>
+              </div>
+                <div class="card__content">
+                  <h3 class="card__title">Nome Projeto</h3>
+                  <p class="card__description">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia vero, dignissimos ea minima incidunt illum officiis suscipit repellat, sed nulla necessitatibus nostrum! 
+                  </p>
+                </div>
+              </header>
+              <footer class="card__footer">
+                <span class="card__tag">JS</span>
+                <span class="card__tag">HTML</span>
+                <span class="card__tag">CSS</span>
+              </footer>
+            </article>
+            <article class="project-card">
+              <header class="card__header">
+                <div class="card__top">
+                  <img src="src/img/folder.svg" alt="Folder icon" class="card__image">
+                  <div class="card__links">
+                    <a href="#" target="_blank" class="icon-btn card__link">
+                      <i class="uil uil-github-alt"></i>
+                    </a>
+                    <a href="#" target="_blank" class="icon-btn card__link">
+                      <i class="uil uil-external-link-alt"></i>
+                  </a>
+                </div>
+              </div>
+                <div class="card__content">
+                  <h3 class="card__title">Nome Projeto</h3>
+                  <p class="card__description">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia vero, dignissimos ea minima incidunt illum officiis suscipit repellat, sed nulla necessitatibus nostrum! 
+                  </p>
+                </div>
+              </header>
+              <footer class="card__footer">
+                <span class="card__tag">JS</span>
+                <span class="card__tag">HTML</span>
+                <span class="card__tag">CSS</span>
+              </footer>
+            </article>
+            <article class="project-card">
+              <header class="card__header">
+                <div class="card__top">
+                  <img src="src/img/folder.svg" alt="Folder icon" class="card__image">
+                  <div class="card__links">
+                    <a href="#" target="_blank" class="icon-btn card__link">
+                      <i class="uil uil-github-alt"></i>
+                    </a>
+                    <a href="#" target="_blank" class="icon-btn card__link">
+                      <i class="uil uil-external-link-alt"></i>
+                  </a>
+                </div>
+              </div>
+                <div class="card__content">
+                  <h3 class="card__title">Nome Projeto</h3>
+                  <p class="card__description">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia vero, dignissimos ea minima incidunt illum officiis suscipit repellat, sed nulla necessitatibus nostrum! 
+                  </p>
+                </div>
+              </header>
+              <footer class="card__footer">
+                <span class="card__tag">JS</span>
+                <span class="card__tag">HTML</span>
+                <span class="card__tag">CSS</span>
+              </footer>
+            </article>
+            <article class="project-card">
+              <header class="card__header">
+                <div class="card__top">
+                  <img src="src/img/folder.svg" alt="Folder icon" class="card__image">
+                  <div class="card__links">
+                    <a href="#" target="_blank" class="icon-btn card__link">
+                      <i class="uil uil-github-alt"></i>
+                    </a>
+                    <a href="#" target="_blank" class="icon-btn card__link">
+                      <i class="uil uil-external-link-alt"></i>
+                  </a>
+                </div>
+              </div>
+                <div class="card__content">
+                  <h3 class="card__title">Nome Projeto</h3>
+                  <p class="card__description">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia vero, dignissimos ea minima incidunt illum officiis suscipit repellat, sed nulla necessitatibus nostrum! 
+                  </p>
+                </div>
+              </header>
+              <footer class="card__footer">
+                <span class="card__tag">JS</span>
+                <span class="card__tag">HTML</span>
+                <span class="card__tag">CSS</span>
+              </footer>
+            </article>
+            <article class="project-card">
+              <header class="card__header">
+                <div class="card__top">
+                  <img src="src/img/folder.svg" alt="Folder icon" class="card__image">
+                  <div class="card__links">
+                    <a href="#" target="_blank" class="icon-btn card__link">
+                      <i class="uil uil-github-alt"></i>
+                    </a>
+                    <a href="#" target="_blank" class="icon-btn card__link">
+                      <i class="uil uil-external-link-alt"></i>
+                  </a>
+                </div>
+              </div>
+                <div class="card__content">
+                  <h3 class="card__title">Nome Projeto</h3>
+                  <p class="card__description">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia vero, dignissimos ea minima incidunt illum officiis suscipit repellat, sed nulla necessitatibus nostrum! 
+                  </p>
+                </div>
+              </header>
+              <footer class="card__footer">
+                <span class="card__tag">JS</span>
+                <span class="card__tag">HTML</span>
+                <span class="card__tag">CSS</span>
+              </footer>
+            </article>
+
+
+          </div>
+
+          <div class="projects__grid">
+
+            
+          </div>
+
+          <button class="box-btn projects-btn">
+            Ver mais
+            <i class="uil uil-angle-down"></i>
+          </button>
+
         </section>
 
         <section class="section section--contact container" id="contact">
