Finish contact section

--- a/index.html
+++ b/index.html
@@ -140,7 +140,24 @@
         </section>
 
         <section class="section section--contact container" id="contact">
-          Contact
+          <h2 class="section__title">Entre em contato</h2>
+          <p class="section__text">
+            Quer me dizer "Oi!"? Tem algo que gostaria de perguntar? Algum novo
+            projeto ou oportunidade? Me manda um email! Ou, para uma resposta
+            mais rápida, me chama lá no
+            <a href="https://twitter.com/_eoisaac" class="section__link"
+              >Twitter</a
+            >.
+          </p>
+
+          <a
+            href="mailto:eoisaacc@gmail.com"
+            target="_blank"
+            class="box-btn"
+          >
+          Enviar email
+          <i class="uil uil-message"></i>
+        </a>
         </section>
       </main>
 
