--- a/index.html
+++ b/index.html
@@ -145,19 +145,18 @@
             Quer me dizer "Oi!"? Tem algo que gostaria de perguntar? Algum novo
             projeto ou oportunidade? Me manda um email! Ou, para uma resposta
             mais rápida, me chama lá no
-            <a href="https://twitter.com/_eoisaac" class="section__link"
+            <a
+              href="https://twitter.com/eoisaacc"
+              target="_blank"
+              class="section__link"
               >Twitter</a
             >.
           </p>
 
-          <a
-            href="mailto:eoisaacc@gmail.com"
-            target="_blank"
-            class="box-btn"
-          >
-          Enviar email
-          <i class="uil uil-message"></i>
-        </a>
+          <a href="mailto:eoisaacc@gmail.com" target="_blank" class="box-btn">
+            Enviar email
+            <i class="uil uil-message"></i>
+          </a>
         </section>
       </main>
 
