Add social list on homepage

--- a/index.html
+++ b/index.html
@@ -69,6 +69,45 @@
             tecnologia, atualmente estou estudando JavaScript, HTML e CSS.
           </p>
 
+          <ul class="social__list">
+            <li class="social__item icon-btn--animated">
+              <a
+                href="https://github.com/eoisaac"
+                target="_blank"
+                class="social__link"
+              >
+                <i class="uil uil-github-alt"></i>
+              </a>
+            </li>
+            <li class="social__item icon-btn--animated">
+              <a
+                href="https://www.linkedin.com/in/eoisaac"
+                target="_blank"
+                class="social__link"
+              >
+                <i class="uil uil-linkedin-alt"></i>
+              </a>
+            </li>
+            <li class="social__item icon-btn--animated">
+              <a
+                href="https://twitter.com/eoisaacc"
+                target="_blank"
+                class="social__link"
+              >
+                <i class="uil uil-twitter-alt"></i>
+              </a>
+            </li>
+            <li class="social__item icon-btn--animated">
+              <a
+                href="https://www.instagram.com/eoisaacc"
+                target="_blank"
+                class="social__link"
+              >
+                <i class="uil uil-instagram"></i>
+              </a>
+            </li>
+          </ul>
+
           <a href="#projects" class="box-btn">
             Ver projetos
             <i class="uil uil-angle-down"></i>
@@ -151,6 +190,7 @@
               class="section__link"
               >Twitter</a
             >.
+            Atualmente, procuro pela minha primeira oportunidade na área.
           </p>
 
           <a href="mailto:eoisaacc@gmail.com" target="_blank" class="box-btn">
