Update contact and tecs

--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
                 <li class="skills__item">JavaScript</li>
                 <li class="skills__item">HTML</li>
                 <li class="skills__item">CSS</li>
+                <li class="skills__item">MySQL</li>
               </ul>
             </div>
             <img
@@ -190,7 +191,7 @@
               class="section__link"
               >Twitter</a
             >.
-            Atualmente, procuro pela minha primeira oportunidade na área.
+            Atualmente, procuro pela minha primeira oportunidade como desenvolvedor.
           </p>
 
           <a href="mailto:eoisaacc@gmail.com" target="_blank" class="box-btn">
