Create toggle lang button and add country flags images

--- a/index.html
+++ b/index.html
@@ -42,7 +42,11 @@
             </ul>
 
             <div class="nav__config">
-              <button class="icon-btn" data-js="toggle-theme-btn">
+              <button class="icon-btn lang-btn" data-js="toggle-lang-btn">
+                <img class="country-flag" src="src/img/br.svg" alt="">
+              </button>
+              
+              <button class="icon-btn theme-btn" data-js="toggle-theme-btn">
                 <i class="uil uil-sun" data-js="theme-icon"></i>
               </button>
             </div>
